# glide-rust

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DEVELOPER.md  NOTICE  PARITY.md  PLANNING.md  README.md  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml
benches/: throughput.rs
examples/: ec_bench.rs
src/: batch.rs  client.rs  compat_commands.rs  config.rs  error.rs  executor.rs  lib.rs  pipeline_options.rs  routes.rs  script.rs  telemetry.rs  value.rs
src/client/: connection.rs  connection_like.rs  mod.rs  redis_compat.rs
src/command_mock/: bitmap.rs  connection_management.rs  ft.rs  generic.rs  geo.rs  hash.rs  hyperloglog.rs  json.rs  list.rs  mod.rs  pubsub.rs  scripting.rs  server_management.rs  set.rs  sorted_set.rs  store_string.rs  stream.rs
src/commands/: bitmap.rs  connection_management.rs  core.rs  ft.rs  generic.rs  geo.rs  hash.rs  hyperloglog.rs  json.rs  list.rs  mod.rs  options.rs  pubsub.rs  scan.rs  scripting.rs  server_management.rs  set.rs  sorted_set.rs  stream.rs  string.rs
src/config/: cluster.rs  common.rs  mod.rs  standalone.rs  tests.rs
src/sync/: mod.rs
tests/: it_auth.rs  it_batch.rs  it_bitmap.rs  it_client.rs  it_cluster.rs  it_cluster_features.rs  it_commands_core.rs  it_commands_extra.rs  it_compat_gen.rs  it_compression.rs  it_connection.rs  it_generic.rs  it_geo.rs  it_hash.rs  it_hyperloglog.rs  it_lazy.rs  it_list.rs  it_parity_guard.rs  it_password.rs  it_pipeline.rs  it_pubsub.rs  it_read_from.rs  it_redis_rs_api.rs  it_redis_rs_extra.rs  it_restored_extensions.rs  it_scan.rs  it_scripting.rs  it_server.rs  it_set.rs  it_sorted_set.rs  it_stream.rs  it_string.rs  it_sync.rs  it_telemetry.rs  it_tls.rs
tests/common/: cluster.rs  helpers.rs  macros.rs  mod.rs  pubsub.rs  server.rs  timeout.rs
tests/mock_commands/: bitmap.rs  connection_management.rs  ft.rs  generic.rs  geo.rs  hash.rs  json.rs  main.rs  pubsub.rs  scripting.rs  server_management.rs  set.rs  sorted_set.rs  stream.rs  string.rs
tests/parity/: mod.rs
tools/: gen_compat_commands.py  verify_command_table.py  verify_redis_parity.py
