[package]
name = "glide-rust"
version = "0.2.0"
# edition 2024 to match the upstream valkey-glide Rust crates (glide-core, ffi,
# python/glide-async, logger_core). No `rust-version` (MSRV) is declared, matching
# upstream — Rust is an internal build detail, not a published-version surface.
edition = "2024"
license = "Apache-2.0"
authors = ["Valkey GLIDE Maintainers"]
description = "Valkey GLIDE — native Rust client for Valkey and Redis OSS, built on glide-core."
repository = "https://github.com/omerrubi-amzn/glide-rust"
readme = "README.md"
keywords = ["valkey", "redis", "glide", "client", "database"]
categories = ["database", "asynchronous"]

[lib]
name = "glide"
path = "src/lib.rs"

[dependencies]
# The shared GLIDE core (Rust → Rust, no FFI), consumed from crates.io as the
# experimentally-published `experimental-glide-core-lib` (repository:
# valkey-io/valkey-glide; lib name `glide_core`). Pinned exactly — the crate is
# brand-new and explicitly experimental; bump deliberately.
#
# This replaces the previous git ("remote") dependency on the monorepo and
# unblocks publishing THIS crate to crates.io (git deps are disallowed there).
glide-core = { package = "experimental-glide-core-lib", version = "=0.1.1" }
# The *same* vendored redis-rs fork glide-core uses, published as
# `experimental-glide-core-rs-dependency` (lib name `redis`, v0.25.2 —
# predating the upstream license change). Depending on the same crates.io
# package makes our `redis::Cmd` / `redis::Value` unify with glide-core's
# expected types — no type mismatch, no re-wrapping.
redis = { package = "experimental-glide-core-rs-dependency", version = "=0.25.2", features = [
    "aio",
    "tokio-comp",
    "cluster",
    "cluster-async",
] }

async-trait = "0.1"
bytes = "1"
futures = "0.3"
# SHA-1 for Script hashes (same crate glide-core itself uses).
sha1_smol = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["async_tokio"] }
once_cell = "1"
# Used only by tests/it_parity_guard.rs (the command-table parity check).
regex = "1"
serde_json = "1"

[[bench]]
name = "throughput"
harness = false

[features]
default = ["sync"]
# Blocking client layer (mirrors Python glide-sync).
sync = []

# Lint hardening, mirroring glide-core's async-safety posture.
[lints.clippy]
# Never hold a (std/parking_lot) lock guard across an .await point.
await_holding_lock = "deny"
# Prefer atomics over a Mutex<bool>/Mutex<integer>.
mutex_atomic = "warn"
